Adds header partial

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -14,8 +14,11 @@
 </head>
 
 <body>
+  <header>
+    <%= render 'layouts/header' %>
+  </header>
   <div class="container-lg mt-4">
-  <%= yield %>
+    <%= yield %>
   </div>
 </body>
 
