--- a/app/views/articles/index.html.erb
+++ b/app/views/articles/index.html.erb
@@ -1,32 +1,30 @@
 <div>
   <h1>Articles</h1>
-  
+
   <table class="table">
     <thead>
       <tr>
         <th scope="col">#</th>
-        <th scope="col">ID</th>
         <th scope="col">Title</th>
         <th scope="col">Actions</th>
       </tr>
     </thead>
-  <tbody>
-      <% @articles.each do |article| %> 
+    <tbody>
+      <% @articles.each do |article| %>
       <tr>
         <td><%= @articles.find_index(article)+1 %></td>
-        <td><%= article.id %></td>
         <td><%= link_to article.title, article %></td>
         <td>
-        <%= link_to 'Show', article %>
-        <%= link_to 'Edit', edit_article_path(article.id) %>
-        <%= link_to "Delete", article_path(article.id),
+          <%= link_to 'Show', article %>
+          <%= link_to 'Edit', edit_article_path(article.id) %>
+          <%= link_to "Delete", article_path(article.id),
                   method: :delete,
                   data: { confirm: "Are you sure you want to delete #{article.title}?" } %>
         </td>
       </tr>
-    <% end %>
-  </tbody>
+      <% end %>
+    </tbody>
   </table>
 </div>
 
-<%= link_to "New Article", new_article_path, class: 'btn btn-secondary' %>
+<%= link_to "New Article", new_article_path, class: 'btn btn-secondary float-end mt-4' %>
