Updates home index layout to include feature articles and about

--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,2 +1,90 @@
-<h1>Welcome to Blog</h1>
-<p>This blog is created using Ruby on Rails</p>
+<div class="hero-section text-center p-4 p-md-5 mb-4 rounded">
+    <h1 class="mt-5 display-4">EPILOGUE.</h1>
+    <p class="lead my-3">Find comfort within these pages.</p>
+</div>
+
+<%# only display featured articles if more than 1 %>
+<% if Article.second %>
+<div class="row mb-2">
+    <div class="col-md-6">
+      <div class="row g-0 border rounded overflow-hidden flex-md-row mb-4 shadow-sm h-md-250 position-relative">
+        <div class="col p-4 d-flex flex-column position-static">
+          <h3 class="mb-0"><%= @article_feature1.title %></h3>
+          <br>
+          <p class="card-text mb-auto">This is a wider card with supporting text below as a natural lead-in to additional content.</p>
+          <div class="text-primary">
+            <%= link_to "Continue Reading", Article.find(@article_feature1.id), class: 'text-primary' %>
+            <%= icon("arrow-right") %>
+          </div>
+        </div>
+        <div class="col-auto d-none d-lg-block">
+            <%= image_tag(Article.last.thumbnail, class:'feature-img') %>
+        </div>
+      </div>
+    </div>
+    <div class="col-md-6">
+      <div class="row g-0 border rounded overflow-hidden flex-md-row mb-4 shadow-sm h-md-250 position-relative">
+        <div class="col p-4 d-flex flex-column position-static">
+          <h3 class="mb-0"><%= @article_feature2.title %></h3>
+          <br>
+          <p class="mb-auto">This is a wider card with supporting text below as a natural lead-in to additional content.</p>
+          <div class="text-primary">
+            <%= link_to "Continue Reading", Article.find(@article_feature2.id), class: 'text-primary' %>
+            <%= icon("arrow-right") %>
+          </div>
+        </div>
+        <div class="col-auto d-none d-lg-block">
+          <%= image_tag(@article_feature2.thumbnail, class:'feature-img') %>
+        </div>
+      </div>
+    </div>
+  </div>
+<% end %>
+<div class="row g-5">
+    <div class="col-md-8">
+      <h3 class="py-4 mb-4 fst-italic border-bottom border-top">
+        <q class="text-muted">To read is to voyage through time.</q><span class="lead">- Carl Sagan</span>
+      </h3>
+
+      <article class="blog-post">
+        <h2 class="blog-post-title">Sample blog post</h2>
+        <p class="blog-post-meta">January 1, 2021 by <a href="#">Mark</a></p>
+
+        <p>This blog post shows a few different types of content that’s supported and styled with Bootstrap. Basic typography, lists, tables, images, code, and more are all supported as expected.</p>
+        <p>This is some additional paragraph placeholder content. It has been written to fill the available space and show how a longer snippet of text affects the surrounding content. We'll repeat it often to keep the demonstration flowing, so be on the lookout for this exact same string of text.</p>
+
+      <article class="blog-post">
+        <h2 class="blog-post-title">New feature</h2>
+        <p class="blog-post-meta">December 14, 2020 by <a href="#">Chris</a></p>
+
+        <p>This is some additional paragraph placeholder content. It has been written to fill the available space and show how a longer snippet of text affects the surrounding content. We'll repeat it often to keep the demonstration flowing, so be on the lookout for this exact same string of text.</p>
+        <ul>
+          <li>First list item</li>
+          <li>Second list item with a longer description</li>
+          <li>Third list item to close it out</li>
+        </ul>
+        <p>This is some additional paragraph placeholder content. It's a slightly shorter version of the other highly repetitive body text used throughout.</p>
+      </article>
+      <nav class="blog-pagination" aria-label="Pagination">
+        <a class="btn btn-outline-primary" href="#">Older</a>
+        <a class="btn btn-outline-secondary disabled" href="#" tabindex="-1" aria-disabled="true">Newer</a>
+      </nav>
+    </div>
+     <div class="col-md-4">
+      <div class="position-sticky" style="top: 2rem;">
+        <div class="p-4 mb-3 bg-primary text-light rounded">
+          <h4 class="fst-italic border-bottom pb-2">About</h4>
+          <p class="mb-0">Hi! Welcome to Epilogue–my special nook for all things books. Sharing with you some book recommendations and reviews.
+          <br><br>Happy reading <%= icon("emoji-smile") %> </p>
+        </div>
+        <div class="p-4">
+          <h4 class="fst-italic">Social</h4>
+          <ol class="list-unstyled">
+            <%= icon("instagram", class: 'mx-2') %>
+            <%= icon("twitter", class: 'mx-2') %>
+            <%= icon("linkedin", class: 'mx-2') %>
+          </ol>
+        </div>
+      </div>
+    </div>
+</div>
