--- a/app/views/articles/new.html.erb
+++ b/app/views/articles/new.html.erb
@@ -1,4 +1,9 @@
-<h1>New Article</h1>
-
-<%= render "form", article: @article %>
-<%= link_to 'Back', articles_path, class: 'btn btn-secondary mt-4' %>
+<div class="container mb-4" style="margin-top: 2em">
+    <h1>New Article</h1>
+    <div class="mb-4 pb-4">
+        <%= render "form", article: @article %>
+        <div class="container">
+            <%= link_to 'Back to Articles', articles_path, class: 'btn btn-secondary mt-4' %>
+        </div>
+    </div>
+</div>
