--- a/app/views/articles/_form.html.erb
+++ b/app/views/articles/_form.html.erb
@@ -1,21 +1,26 @@
-<%= form_with model: article do |form| %>
-<div>
-  <%= form.label :title, class: 'form-label' %><br>
-  <%= form.text_field :title, class: 'form-control' %>
+<%= form_with model: article do |f| %>
+<div class="container">
+  <%= f.label :title, class: 'form-label' %><br>
+  <%= f.text_field :title, class: 'form-control' %>
+  <%= f.label :thumbnail, class: 'form-label' %>
+  <%= f.file_field :thumbnail, class: 'form-control' %>
   <% article.errors.full_messages_for(:title).each do |message| %>
   <div><%= message %></div>
   <% end %>
 </div>
 
-<div class="field">
-  <%= form.label :body, class: 'form-label' %>
-  <%= form.rich_text_area :body, class: 'form-control' %>
+<div class="container field">
+  <%= f.label :body, class: 'form-label' %>
+  <%= f.rich_text_area :body, class: 'form-control' %>
   <% article.errors.full_messages_for(:body).each do |message| %>
   <div><%= message %></div>
   <% end %>
 </div>
 
-<div>
-  <%= form.submit %>
+<div class="container">
+  <div class="float-end">
+    <%= f.submit 'Update Article', class: 'btn btn-primary my-4' %>
+  </div>
+  <% end %>
 </div>
-<% end %>
+
