--- a/app/views/articles/index.html.erb
+++ b/app/views/articles/index.html.erb
@@ -1,30 +1,32 @@
-<div>
-  <h1>Articles</h1>
-
-  <table class="table">
-    <thead>
-      <tr>
-        <th scope="col">#</th>
-        <th scope="col">Title</th>
-        <th scope="col">Actions</th>
-      </tr>
-    </thead>
-    <tbody>
-      <% @articles.each do |article| %>
-      <tr>
-        <td><%= @articles.find_index(article)+1 %></td>
-        <td><%= link_to article.title, article %></td>
-        <td>
-          <%= link_to 'Show', article %>
-          <%= link_to 'Edit', edit_article_path(article.id) %>
-          <%= link_to "Delete", article_path(article.id),
-                  method: :delete,
-                  data: { confirm: "Are you sure you want to delete #{article.title}?" } %>
-        </td>
-      </tr>
-      <% end %>
-    </tbody>
-  </table>
+<div class="float-end mt-4">
+<%# only display back and new article options if article was written by admin %>
+  <% if current_user&.admin %>
+  <%= link_to "New Article", new_article_path, class: 'btn btn-primary' %>
+  <% end %>
 </div>
-
-<%= link_to "New Article", new_article_path, class: 'btn btn-secondary float-end mt-4' %>
+<div class="container px-4 py-5" id="icon-grid">
+    <h2 class="pb-2 border-bottom">Articles</h2>
+    <div class="row row-cols-1 row-cols-sm-2 row-cols-md-2 row-cols-lg-3 g-4 py-5">
+    <% @articles.each do |article| %>
+      <div class="col d-flex align-items-start">
+        <div>
+          <h4 class="fw-bold mb-0"><%= article.title %></h4>
+          <p><span class="text-muted">By:</span> <%= article.user.username %> |
+              <span class="text-muted">Updated: </span><%= article.updated_at.strftime("%b %d, %Y")%></p>
+          <div>
+          <%# only display edit and delete options if article was written by admin %>
+          <% if current_user&.admin %>
+              <%= link_to icon("pencil-square") + ' Edit', edit_article_path(article.id), class: 'text-success' %> |
+              <%= link_to icon("trash") + ' Delete', article_path(article.id),
+                      method: :delete,
+                      data: { confirm: "Are you sure you want to delete #{article.title}?" },
+                      class: 'text-danger' %> |
+          <% end %>
+              <%= link_to "Continue Reading", article, class: 'text-primary' %>
+              <%= icon("arrow-right", class: 'text-primary') %>
+          </div>
+        </div>
+      </div>
+      <% end %>
+    </div>
+  </div>
