--- a/app/views/articles/show.html.erb
+++ b/app/views/articles/show.html.erb
@@ -1,14 +1,22 @@
-<h1>
-  <%= @article.title %>
-</h1>
-<p>Posted on: <%= @article.created_at.strftime("%b %d, %Y")%></p>
-<p>Last updated: <%= @article.updated_at.strftime("%b %d, %Y")%></p>
-<p>
-  <%= @article.body %>
-</p>
-
-<%= link_to "Edit", edit_article_path(@article) %>
-<%= link_to "Delete", article_path(@article),
+<p id="notice"><%= notice %></p>
+<div class="container mb-4" style="margin-top: 2em">
+<%= link_to "Back to Articles", articles_path, class: 'btn btn-secondary mb-4' %>
+  <div class="card">
+    <div class="card-header">
+        <h1><%= @article.title %></h1>
+        <p><span class="text-muted">By:</span> <%= @article.user.username %> |
+        <span class="text-muted">Updated: </span> <%= @article.updated_at.strftime("%b %d, %Y")%></p>
+    </div>
+  <div class="card-body">
+    <p class="card-text"><%= @article.body %></p>
+    <% if current_user&.admin %>
+  </div>
+</div>
+<div class="mb-4 pb-4 float-end">
+    <%= link_to "Edit", edit_article_path(@article), class: 'btn btn-secondary my-4' %>
+    <%= link_to "Delete", article_path(@article),
                   method: :delete,
-                  data: { confirm: "Are you sure you want to delete #{@article.title}?" } %>
-<%= link_to "Back", articles_path %>
+                  data: { confirm: "Are you sure you want to delete #{@article.title}?" },
+                  class: 'btn btn-danger' %>
+ </div>
+<% end %>
