--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -1,3 +1,3 @@
-<div class="container">
-<span class="text-muted">Place sticky footer content here.</span>
+<div class="container text-center">
+    <span class="text-muted">&copy 2021</span>
 </div>
