Updates articles and show article style

--- a/app/views/articles/show.html.erb
+++ b/app/views/articles/show.html.erb
@@ -1,5 +1,5 @@
 <p id="notice"><%= notice %></p>
-<div class="container mb-4" style="margin-top: 2em">
+<div class="container col-lg-9 mb-4" style="margin-top: 2em">
 <%= link_to "Back to Articles", articles_path, class: 'btn btn-secondary mb-4' %>
   <div class="card">
     <div class="card-header">
