--- a/app/views/articles/index.html.erb
+++ b/app/views/articles/index.html.erb
@@ -12,7 +12,11 @@
         <div>
           <h4 class="fw-bold mb-0"><%= article.title %></h4>
           <p class="mt-2"><span class="text-muted">By:</span> <%= article.user.username %> |
-              <span class="text-muted">Updated: </span><%= article.updated_at.strftime("%b %d, %Y")%></p>
+              <span class="text-muted">Updated: </span><%= article.updated_at.strftime("%b %d, %Y")%>
+          </p>
+          <p>
+          <%= article.body.to_plain_text.truncate_words(15) %>
+          </p>
           <div>
           <%# only display edit and delete options if article was written by admin %>
           <% if current_user&.admin %>
