--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -18,6 +18,7 @@
   </header>
   <main class="flex-shrink-0">
     <div class="container">
+      <p id="notice"><%= notice %></p>
       <%= yield %>
     </div>
   </main>
