Creates comments for each article

--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -58,7 +58,7 @@
       </div>
     </div>
     <div class="col-md-8 my-4">
-      <h3 class="py-4 mb-4 fst-italic border-bottom border-top">
+      <h3 class="py-4 mb-4 fst-italic border-bottom">
         <q class="text-muted">To read is to voyage through time.</q><span class="lead">- Carl Sagan</span>
       </h3>
 
@@ -81,9 +81,5 @@
         </ul>
         <p>This is some additional paragraph placeholder content. It's a slightly shorter version of the other highly repetitive body text used throughout.</p>
       </article>
-      <nav class="blog-pagination" aria-label="Pagination">
-        <a class="btn btn-outline-primary" href="#">Older</a>
-        <a class="btn btn-outline-secondary disabled" href="#" tabindex="-1" aria-disabled="true">Newer</a>
-      </nav>
     </div>
 </div>
