--- a/app/views/articles/show.html.erb
+++ b/app/views/articles/show.html.erb
@@ -11,7 +11,7 @@
     <% if current_user&.admin %>
   </div>
 </div>
-<div class="mb-4 pb-4 float-end">
+<div class="container-fluid mb-4 pb-4">
     <%= link_to "Edit", edit_article_path(@article), class: 'btn btn-secondary my-4' %>
     <%= link_to "Delete", article_path(@article),
                   method: :delete,
@@ -19,3 +19,11 @@
                   class: 'btn btn-danger' %>
  </div>
 <% end %>
+<div class="container-fluid">
+<% if @article.comments.any? %>
+  <h2>Comments</h2>
+  <%= render @article.comments %>
+<% end %>
+ <h2 class="mt-4">Add a comment:</h2>
+  <%= render 'comments/form' %>
+</div>
