--- a/app/views/comments/_comment.html.erb
+++ b/app/views/comments/_comment.html.erb
@@ -1,7 +1,7 @@
 <% @article.comments.each do |comment| %>
-  <div class="card">
-    <p class="card-header"><%= icon("person-fill", class: 'mx-2') %><strong><%= comment.commenter %></strong>
-    <span class="text-muted"> | <%= comment.updated_at.strftime("%b %d, %Y") %></span></p>
+  <div class="card mt-2">
+    <p class="card-header d-flex justify-content-between"><strong><%= icon("person-fill", class: 'mx-2') %> <%= comment.commenter %></strong>
+    <span class="text-muted"> <%= comment.updated_at.strftime("%b %d, %Y") %></span></p>
     <p class="card-body">
       <%= comment.body %>
     </p>
