Prevents current user to change commenter name when submitting comments

--- a/app/views/comments/_form.html.erb
+++ b/app/views/comments/_form.html.erb
@@ -1,7 +1,7 @@
 <%= form_with model: [ @article, @article.comments.build ] do |form| %>
   <p>
     <%= form.label :commenter, class: 'form-label' %><br>
-    <%= form.text_field :commenter, class: 'form-control' %>
+    <%= form.text_field :commenter, class: 'form-control', value: current_user.username, readonly: true %>
   </p>
   <p>
     <%= form.label :body, class: 'form-label' %><br>
