--- a/app/views/comments/_comment.html.erb
+++ b/app/views/comments/_comment.html.erb
@@ -3,13 +3,15 @@
     <p class="card-header d-flex justify-content-between"><strong><%= icon("person-fill", class: 'mx-2') %> <%= comment.commenter %></strong>
       <span class="text-muted">
         <%= comment.updated_at.strftime("%b %d, %Y") %>
-        <%# only allow deletion of comment if current user's own comment or admin %>
-        <% if current_user.username == comment.commenter || current_user&.admin %>
-          <%= link_to icon("trash", class: 'mx-2'), article_comment_path(comment.article, comment),
+        <%if user_signed_in? %>
+          <%# only allow deletion of comment if current user's own comment or admin %>
+          <% if current_user.username == comment.commenter || current_user&.admin %>
+            <%= link_to icon("trash", class: 'mx-2'), article_comment_path(comment.article, comment),
                         method: 'delete',
                         data: { confirm: "Are you sure?" },
                         class: 'text-danger' %>
-        <% end %>
+          <% end %>
+        <%end %>
       </span>
     </p>
     <p class="card-body">
