--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -61,25 +61,12 @@
       <h3 class="py-4 mb-4 fst-italic border-bottom">
         <q class="text-muted">To read is to voyage through time.</q><span class="lead">- Carl Sagan</span>
       </h3>
-
-      <article class="blog-post">
-        <h2 class="blog-post-title">Sample blog post</h2>
-        <p class="blog-post-meta">January 1, 2021 by <a href="#">Mark</a></p>
-
-        <p>This blog post shows a few different types of content that’s supported and styled with Bootstrap. Basic typography, lists, tables, images, code, and more are all supported as expected.</p>
-        <p>This is some additional paragraph placeholder content. It has been written to fill the available space and show how a longer snippet of text affects the surrounding content. We'll repeat it often to keep the demonstration flowing, so be on the lookout for this exact same string of text.</p>
-
-      <article class="blog-post">
-        <h2 class="blog-post-title">New feature</h2>
-        <p class="blog-post-meta">December 14, 2020 by <a href="#">Chris</a></p>
-
-        <p>This is some additional paragraph placeholder content. It has been written to fill the available space and show how a longer snippet of text affects the surrounding content. We'll repeat it often to keep the demonstration flowing, so be on the lookout for this exact same string of text.</p>
-        <ul>
-          <li>First list item</li>
-          <li>Second list item with a longer description</li>
-          <li>Third list item to close it out</li>
-        </ul>
-        <p>This is some additional paragraph placeholder content. It's a slightly shorter version of the other highly repetitive body text used throughout.</p>
+    <% @feature_articles.each do |article| %>
+      <article>
+        <h2><%= article.title %></h2>
+        <p><%= article.updated_at.strftime("%b %d, %Y") %> by <%= article.user.username %></p>
+        <p><%= article.body.to_plain_text.truncate_words(60) %></p>
       </article>
+    <% end %>
     </div>
 </div>
