Adds style to alerts

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -20,7 +20,7 @@
           <%= render 'layouts/notice' %>
         <% end %>
         <% if alert %>
-          <p><%= alert %></p>
+          <%= render 'layouts/alert' %>
         <% end %>
         <%= yield %>
       </div>
