--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -16,9 +16,11 @@
             <%= icon("arrow-right") %>
           </div>
         </div>
-        <div class="col-auto d-none d-lg-block">
-            <%= image_tag(Article.last.thumbnail, class:'feature-img') %>
-        </div>
+        <% if @article_feature1.thumbnail.present?  %>
+          <div class="col-auto d-none d-lg-block">
+              <%= image_tag(@article_feature1.thumbnail, class:'feature-img') %>
+          </div>
+        <% end %>
       </div>
     </div>
     <div class="col-md-6">
@@ -32,9 +34,11 @@
             <%= icon("arrow-right") %>
           </div>
         </div>
+        <% if @article_feature2.thumbnail.present?  %>
         <div class="col-auto d-none d-lg-block">
           <%= image_tag(@article_feature2.thumbnail, class:'feature-img') %>
         </div>
+        <% end %>
       </div>
     </div>
   </div>
@@ -64,10 +68,11 @@
     <% if Article.fourth %>
     <% @feature_articles.each do |article| %>
       <article>
-        <h2><%= link_to article.title, article_path(article) %></h2>
+        <h2><%= link_to article.title, article_path(article), class: 'link-dark' %></h2>
         <p><%= article.updated_at.strftime("%b %d, %Y") %> by <%= article.user.username %></p>
         <p><%= article.body.to_plain_text.truncate_words(60) %></p>
       </article>
+      <hr>
     <% end %>
     <% end %>
     </div>
